Add door skip codes for EU and US releases. Remove URL prefix from local links.

--- a/Dolphin/GCDE08.ini
+++ b/Dolphin/GCDE08.ini
@@ -2,5 +2,5 @@
 $Remove Door Animations
 [OnFrame]
 $Remove Door Animations
-0x8017C594:dword:0x60000000
-0x8017C59C:dword:0x60000000
+0x80169FAC:dword:0x60000000
+0x80169FB4:dword:0x60000000
