--- a/Dolphin/GCDP08.ini
+++ b/Dolphin/GCDP08.ini
@@ -2,5 +2,5 @@
 $Remove Door Animations
 [OnFrame]
 $Remove Door Animations
-0x8017C594:dword:0x60000000
-0x8017C59C:dword:0x60000000
+0x8016A948:dword:0x60000000
+0x8016A950:dword:0x60000000
