--- a/doorskip/RPCS3/imported_patch.yml
+++ b/doorskip/RPCS3/imported_patch.yml
@@ -1,23 +1,23 @@
 Version: 1.2
 
 PPU-5b1fe8f0b8eab817078b6db007de327653bc65dc: # BIOHAZARD CODE: Veronica 完全版 (JP) (PSN)
-  Remove Door Animations (PSN):
+  Remove Door Animations:
     Games:
       "BIOHAZARD CODE: Veronica 完全版":
         NPJB00135: [ 01.00 ]
     Author: Kapdap
-    Notes: This patch is for the release downloaded from the JP PSN store.
+    Notes: Works with JP PSN release.
     Patch Version: 1.0
     Patch:
       - [ be32, 0x1AE304, 0x38600000 ]
       
 PPU-37f854495138eeb5afdc2db9d4cf6a2d4918beb6: # BIOHAZARD CODE: Veronica 完全版 (JP) (Disc)
-  Remove Door Animations (Disc):
+  Remove Door Animations:
     Games:
       "BIOHAZARD CODE: Veronica 完全版":
         NPJB00135: [ 01.00 ]
     Author: Kapdap
-    Notes: This patch is for the Biohazard Revival Selection disc release (BLJM-55068, BLJM-60372).
+    Notes: Works with Biohazard Revival Selection disc release.
     Patch Version: 1.0
     Patch:
       - [ be32, 0x1AE304, 0x38600000 ]
